uploaded homework assignment changes

--- a/webdev_c1_knowcheck_01-main/index.html
+++ b/webdev_c1_knowcheck_01-main/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Code Louisville Student Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
     
@@ -53,7 +54,7 @@
 
             <h1>You're Going to Hire Me.</h1>
 
-            <p>Hello, my name is [INSERT NAME] I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
+            <p>Hello, my name is Cierra Parr I'm a student at Code Lousville. In about 24 weeks I will have the skills and knowledge to be hired as a Junior Web Developer.</p>
 
             <a href="#aboutme" class="btn">Learn More About Me</a>
 
@@ -65,7 +66,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/IMG_6319.JPG" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
@@ -117,7 +118,7 @@
 
         <footer class="footer-content">
 
-            <p>&copy; 2022 Code Louisville. This website maintained by: [YOUR NAME HERE]</p> 
+            <p>&copy; 2022 Code Louisville. This website maintained by: Cierra Parr</p> 
 
         </footer>
 
